# awa5x

./: .gitignore  Changelog  Makefile.am  README  configure.ac
doc/: .gitignore  Makefile.am  awa5.1  awa5c.1  awa5d.1  awa5p.1  awa5x.html.in
doc/book/: Makefile.am  celsius.awa  celsius2.awa  celsius3.awa  celsius4.awa  charcount.awa  hello1.awa  hello2.awa  hello3.awa  main.tex
m4/: ax_check_compiler_flag.m4  ax_var_patdel.m4  ax_with_pkgconfig.m4
src/: .gitignore  Makefile.am  abyss.c  abyss.h  aline.c  aline.h  awa5.c  awa5c.c  awa5d.c  awa5p.c  eval.c  eval.h  extern.c  extern.h  filemap.c  filemap.h  gap.c  gap.h  grow.c  grow.h  hash.c  hash.h  opcodes.c  opcodes.h  strtoawa.c  strtoawa.h  test_abyss.c  test_aline.c  test_eval  test_eval.c  test_gap.c  test_grow.c  test_hash.c  test_opcodes.c  test_strtoawa.c  test_utf8.c  utf8.c  utf8.h
vendors/: .gitignore  Makefile.am  getline.c  getline.h
